
EXTRA_DIST = $(TESTS) functions.inc file-00 file-ff file-random file-text

noinst_PROGRAMS = zzero zznop bug-overflow bug-memory bug-div0

TESTS = check-build check-flag-A check-flag-f check-flag-m check-flag-M \
        check-flag-r check-overflow check-div0 check-utils

echo-sources: ; echo $(SOURCES)

