
EXTRA_DIST = $(TESTS) \
             functions.inc \
             file-00 \
             file-ff \
             file-random \
             file-text

noinst_PROGRAMS = zzero zznop zzone \
                  bug-overflow \
                  bug-memory \
                  bug-div0 \
                  bug-mmap

TESTS = check-zzuf-A-autoinc \
        check-zzuf-f-fuzzing \
        check-zzuf-m-md5 \
        check-zzuf-M-max-memory \
        check-zzuf-r-ratio \
        check-source \
        check-win32 \
        check-overflow \
        check-div0 \
        check-utils \
        check-mmap

echo-sources: ; echo $(SOURCES)

